--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node ./src/index.js",
     "error": "TEST_ERROR=true node ./src/index.js",
-    "reset": "psql -U development -d scheduler_development < ./src/db/schema/create.sql && psql -U development -d scheduler_development < ./src/db/schema/development.sql"
+    "reset": "psql -U development -d scheduler_development < ./src/db/schema/create.sql && psql -U development -d scheduler_development < ./src/db/schema/development.sql",
+    "test:server": "NODE_ENV=test npm start",
+    "cypress": "cypress open -P ."
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +23,7 @@
     "ws": "^7.0.0"
   },
   "devDependencies": {
+    "cypress": "^13.14.2",
     "jest": "^24.8.0",
     "supertest": "^4.0.2"
   },
